# footstep-editor

./: LICENSE  README.md  help_device.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
src/: __init__.py  __main__.py  main.py
src/core/: __init__.py  audio_engine.py  audio_generator.py  footstep_engine.py  mixer.py  models.py
src/ui/: __init__.py  frmMain.py  main.py  theme.py
src/ui/themes/: __init__.py  main.scss  variables.py
src/ui/widgets/: action_panel.py  mix_pad.py  properties_panel.py  timeline_panel.py  view_panel.py
src/utils/: ffmpeg_setup.py
tests/: test_audio_generator.py
