[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "footstep-editor"
version = "0.1.0"
description = "A sound effects editor for generating realistic footstep audio"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "PySide6>=6.10.2",
    "numpy>=1.24.0",
    "audioop-lts>=0.2.2",
    "libsass>=0.23.0",
    "miniaudio>=1.61",
    "pydub>=0.25.1",
]

[project.optional-dependencies]
dev = [
    "black>=26.1.0",
    "flake8>=6.0.0"
]

[project.scripts]
footstep-editor = "footstep_editor:main"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py313', 'py314']

[tool.isort]
profile = "black"
line_length = 100
